//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  mobile_no String
  orders Order [not null]
  products Product [not null]
  customer Customer [not null]
  role Role [not null]
  samples Samples [not null]
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  author User
  authorId String
  product_name String [not null]
  quantity String [not null]
  weight String [not null]
  customer String [not null]
  delivery_date String [not null]
}

Table Product {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  author User
  authorId String
  productName String [not null]
  maker String [not null]
  productWeight String [not null]
  category String [not null]
  mfgDate String [not null]
  expDate String [not null]
}

Table Customer {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  author User
  authorId String
  name String [not null]
  address String [not null]
  mobile_number String [not null]
}

Table Samples {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  author User
  authorId String
  product_name String [not null]
  price String [not null]
  quantity String [not null]
  weight String [not null]
}

Enum Role {
  ADMIN
  SALESMAN
}

Ref: Order.authorId > User.id

Ref: Product.authorId > User.id

Ref: Customer.authorId > User.id

Ref: Samples.authorId > User.id